--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 dash==2.13.0
+dash-auth==2.0.0
 dash-bootstrap-components==1.5.0
 dash-bootstrap-templates==1.1.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 gunicorn==21.2.0
-numpy==1.25.2
-pandas==2.0.3
+numpy==1.21.6
+pandas==1.3.5
 plotly==5.16.1
